--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ background-color: black;
 .scroll {
   position: relative;
  
-  justify-content: center;
+  /* justify-content: center; */
   display: grid;
   grid-template-columns: repeat(auto-fill, 150px);
   grid-auto-rows: 150px;
